@@ -1,0 +1,3 @@
+<!-- Test file for a description containing a parse error (not
+     well formed).  -->
+<target>
